--- a/AssetDbBenchmarkTest/AssetDbBenchmarkTest.csproj
+++ b/AssetDbBenchmarkTest/AssetDbBenchmarkTest.csproj
@@ -52,6 +52,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AssetHelper.cs" />
     <Compile Include="Database.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
