--- a/AssetDbBenchmarkTest/packages.config
+++ b/AssetDbBenchmarkTest/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
+  <package id="RavenDB.Client" version="3.5.9" targetFramework="net461" />
+  <package id="RavenDB.Database" version="3.5.9" targetFramework="net461" />
   <package id="Z.EntityFramework.Extensions" version="3.17.2" targetFramework="net461" />
 </packages>
